--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "dependencies": {
     "@storyblok/vue": "^6.0.0",
     "axios": "^0.26.0",
-    "vue": "^3.2.26"
+    "vue": "^3.2.26",
+    "vue-router": "^4.5.0"
   },
   "devDependencies": {
     "@vitejs/plugin-basic-ssl": "^1.2.0",
